Closed
Bug 1662413
Opened 5 years ago
Closed 5 years ago
Perma dom/ipc/WindowGlobalChild.cpp:117:27: error: unused variable 'bc' [-Werror,-Wunused-variable] when Gecko 82 merges to Beta on 2020-09-21
Categories
(Core :: DOM: Content Processes, defect)
Core
DOM: Content Processes
Tracking
()
VERIFIED
FIXED
82 Branch
Tracking | Status | |
---|---|---|
firefox-esr68 | --- | unaffected |
firefox-esr78 | --- | unaffected |
firefox80 | --- | unaffected |
firefox81 | --- | unaffected |
firefox82 | blocking | verified |
People
(Reporter: aryx, Assigned: mccr8)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
central-as-beta simulation: https://treeherder.mozilla.org/#/jobs?repo=try&group_state=expanded&resultStatus=testfailed%2Cbusted%2Cexception%2Cretry%2Cusercancel%2Crunnable&revision=e414bf75766c66a5846dfade22a333cac4f73cab&selectedTaskRun=Kqo2FuCQQJec7F3JOKo6cA.0
Log: https://treeherder.mozilla.org/logviewer.html#?job_id=314552551&repo=try
/builds/worker/checkouts/gecko/dom/ipc/WindowGlobalChild.cpp:117:27: error: unused variable 'bc' [-Werror,-Wunused-variable]
Flags: needinfo?(kmaglione+bmo)
Updated•5 years ago
|
Summary: Perma dom/ipc/WindowGlobalChild.cpp:117:27: error: unused variable 'bc' [-Werror,-Wunused-variable] when Gecko 81 merges to Beta on 2020-09-21 → Perma dom/ipc/WindowGlobalChild.cpp:117:27: error: unused variable 'bc' [-Werror,-Wunused-variable] when Gecko 82 merges to Beta on 2020-09-21
Assignee | ||
Comment 1•5 years ago
|
||
I can fix this.
Assignee: nobody → continuation
Flags: needinfo?(kmaglione+bmo)
Assignee | ||
Comment 2•5 years ago
|
||
Pushed by amccreight@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/77710b9c9d86
Only define bc in WindowGlobalChild::Create when needed. r=kmag
Comment 4•5 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 82 Branch
Comment 5•5 years ago
|
||
Verified as fixed with this beta sim:
https://treeherder.mozilla.org/#/jobs?repo=try&group_state=expanded&resultStatus=testfailed%2Cbusted%2Cexception%2Cretry%2Cusercancel%2Crunnable&revision=101c978b70a538ba5534c2abcefd63110135204d
Status: RESOLVED → VERIFIED
Updated•4 years ago
|
Keywords: regression
Updated•4 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•