Bug 1662413 - Only define bc in WindowGlobalChild::Create when needed. r=kmag

Differential Revision: https://phabricator.services.mozilla.com/D89008